EA-3451 copy to docker image